--- a/app/src/main/res/layout/fragment_register_done.xml
+++ b/app/src/main/res/layout/fragment_register_done.xml
@@ -33,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="22dp"
-            android:text="회원가입이 완료되었습니다"
+            android:text="@string/tv_done_reg"
             android:textSize="18sp"
             android:textColor="#565b59"
             android:letterSpacing="-0.05"
@@ -63,7 +63,7 @@
             android:paddingTop="17dp"
             android:paddingBottom="17dp"
             android:background="@drawable/round_green"
-            android:text="완료"
+            android:text="@string/bt_done_reg"
             android:textSize="16sp"
             android:textColor="@color/colorWhite"
             app:notoTextStyle="medium"
