--- a/app/src/main/res/layout/fragment_register_verification.xml
+++ b/app/src/main/res/layout/fragment_register_verification.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
@@ -42,7 +43,7 @@
             android:background="@drawable/round_gray_f5"
             android:gravity="center_vertical"
             android:paddingStart="21dp"
-            android:text="내국인"
+            android:text="@string/tv_verification_nation"
             app:layout_constraintBottom_toBottomOf="@id/et_name"
             app:layout_constraintEnd_toStartOf="@id/et_name"
             app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +56,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginEnd="18dp"
             android:background="@drawable/round_gray_f5"
-            android:hint="이름"
+            android:hint="@string/et_verification_name"
             android:inputType="textPersonName"
             android:maxLines="1"
             android:paddingStart="21dp"
@@ -91,7 +92,8 @@
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="@id/layout_idNum"
                 app:layout_constraintEnd_toEndOf="@id/layout_idNum"
-                app:layout_constraintTop_toTopOf="@id/layout_idNum" />
+                app:layout_constraintTop_toTopOf="@id/layout_idNum"
+                tools:ignore="HardcodedText" />
 
             <View
                 android:id="@+id/hyphen"
@@ -108,7 +110,7 @@
                 style="@style/EtRegStyle"
                 android:layout_marginStart="27dp"
                 android:background="@android:color/transparent"
-                android:hint="생년월일"
+                android:hint="@string/et_verification_birth"
                 android:maxLength="6"
                 android:maxLines="1"
                 android:inputType="numberDecimal"
@@ -161,7 +163,7 @@
                 style="@style/EtRegStyle"
                 android:paddingStart="20dp"
                 android:gravity="center_vertical"
-                android:text="통신사"
+                android:text="@string/tv_verification_agency"
                 android:textSize="14sp"
                 android:background="@drawable/round_gray_f5"
                 app:layout_constraintBottom_toBottomOf="@id/layout_phoneNum"
@@ -173,7 +175,7 @@
                 android:background="@android:color/transparent"
                 android:paddingStart="12dp"
                 style="@style/EtRegStyle"
-                android:hint="휴대폰 번호"
+                android:hint="@string/et_verification_phone"
                 android:inputType="numberDecimal"
                 android:maxLength="11"
                 android:maxLines="1"
@@ -190,7 +192,7 @@
             android:layout_height="0dp"
             android:layout_marginStart="10dp"
             android:background="@drawable/round_green"
-            android:text="전송"
+            android:text="@string/bt_verification_send"
             android:textColor="@android:color/white"
             android:textSize="14dp"
             app:layout_constraintBottom_toBottomOf="@id/layout_phoneNum"
@@ -225,14 +227,15 @@
             android:textColor="@color/colorPrimary"
             app:layout_constraintTop_toTopOf="@id/et_code"
             app:layout_constraintEnd_toEndOf="@id/et_code"
-            app:layout_constraintBottom_toBottomOf="@id/et_code"/>
+            app:layout_constraintBottom_toBottomOf="@id/et_code"
+            tools:ignore="HardcodedText" />
 
         <com.thustop_00.widgets.NotoButton
             android:id="@+id/bt_done"
             style="@style/btStyle"
             android:background="@drawable/round_gray_c4"
             android:onClick="@{IDVerfrag::onDoneClick}"
-            android:text="완료"
+            android:text="@string/bt_verification_done"
             android:textColor="@android:color/white"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
