--- a/app/src/main/res/layout/time_picker_dialog.xml
+++ b/app/src/main/res/layout/time_picker_dialog.xml
@@ -9,7 +9,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/round_white"
+        android:background="#ffffff"
         app:layout_constraintTop_toTopOf="@id/title">
 
         <TimePicker
@@ -30,7 +30,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            android:layout_marginBottom="5dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="15dp"
             android:text="확인"
             android:textColor="@color/colorWhite"
             style="@style/EtStyle"
