--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,6 +42,30 @@
         <item name="android:textColor">#979797</item>
     </style>
 
+    <style name="EtAddRouteStyle">
+        <item name="android:layout_height">48dp</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_marginStart">18dp</item>
+        <item name="android:layout_marginEnd">18dp</item>
+        <item name="android:paddingStart">55dp</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:imeOptions">actionSearch</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#535353</item>
+    </style>
+
+    <style name="tvAddRouteStyle">
+        <item name="android:layout_height">48dp</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_marginStart">18dp</item>
+        <item name="android:layout_marginEnd">18dp</item>
+        <item name="android:paddingStart">60dp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#535353</item>
+    </style>
+
     <style name="SpinnerTimePickerDialogTheme" parent="Theme.AppCompat.Light.Dialog">
         <!-- android:timePickerStyle was not added until API 21 -->
         <item name="android:timePickerStyle">@style/TimePickerStyle</item>
