폰트 박멸 작업, 노선 추가 시간 설정 연결, Address class에 getter setter 추가

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,7 @@
                     android:textSize="18sp"
                     android:textStyle="normal"
                     android:visibility="gone"
+                    app:notoTextStyle="bold"
                     tools:layout_editor_absoluteX="163dp"
                     tools:layout_editor_absoluteY="18dp" />
 
