--- a/app/src/main/res/layout/fragment_find_password.xml
+++ b/app/src/main/res/layout/fragment_find_password.xml
@@ -21,6 +21,7 @@
             android:id="@+id/et_name_find"
             style="@style/EtLoginStyle"
             android:hint="@string/et_name_find"
+            app:notoTextStyle="regular"
             app:layout_constraintBottom_toTopOf="@id/et_phone_find"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/guideline1"
@@ -36,6 +37,7 @@
             style="@style/EtLoginStyle"
             android:layout_marginTop="15dp"
             android:hint="@string/et_phone_find"
+            app:notoTextStyle="regular"
             app:layout_constraintTop_toBottomOf="@id/et_name_find"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
