--- a/app/src/main/res/layout/fragment_intro_base.xml
+++ b/app/src/main/res/layout/fragment_intro_base.xml
@@ -34,6 +34,7 @@
             android:text="@string/bt_intro_later"
             android:textColor="#6d7278"
             android:textSize="12sp"
+            app:notoTextStyle="regular"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:onClick="@{intro::onLaterClick}"/>
@@ -93,10 +94,12 @@
             android:id="@+id/bt_intro_start"
             android:layout_width="0dp"
             android:layout_height="48dp"
-            app:layout_constraintWidth_percent="0.55"
             android:background="@drawable/round_green"
             android:text="@string/bt_intro_start"
             android:visibility="invisible"
+            android:textColor="#ffffff"
+            app:notoTextStyle="bold"
+            app:layout_constraintWidth_percent="0.55"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
