--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -50,12 +50,15 @@
             android:textSize="13sp"
             android:onClick="@{mainfrag::onSelLocalClick}"
             android:clickable="true"
+            android:focusable="true"
+            app:notoTextStyle="regular"
             app:layout_constraintBottom_toBottomOf="@id/top_layout"
             app:layout_constraintEnd_toEndOf="@id/top_layout"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/guideline1"
-            tools:ignore="HardcodedText" />
+            tools:ignore="HardcodedText"
+            />
 
         <ImageView
             android:id="@+id/ivSelLocal"
@@ -130,6 +133,7 @@
                 android:text="@string/bt_local1"
                 android:textColor="#454545"
                 android:textSize="13sp"
+                app:notoTextStyle="regular"
                 app:layout_constraintEnd_toStartOf="@id/bt_local2"
                 app:layout_constraintHorizontal_weight="1"
                 app:layout_constraintStart_toStartOf="@id/layout_local"
@@ -146,6 +150,7 @@
                 android:text="@string/bt_local2"
                 android:textColor="#454545"
                 android:textSize="13sp"
+                app:notoTextStyle="regular"
                 app:layout_constraintEnd_toStartOf="@id/bt_local3"
                 app:layout_constraintHorizontal_weight="1"
                 app:layout_constraintStart_toEndOf="@id/bt_local1"
@@ -164,6 +169,7 @@
                 android:text="@string/bt_local3"
                 android:textColor="#454545"
                 android:textSize="13sp"
+                app:notoTextStyle="regular"
                 app:layout_constraintEnd_toEndOf="@id/layout_local"
                 app:layout_constraintHorizontal_weight="1"
                 app:layout_constraintStart_toEndOf="@id/bt_local2"
@@ -180,6 +186,7 @@
                 android:textColor="#535353"
                 android:textSize="13sp"
                 android:bufferType="spannable"
+                app:notoTextStyle="bold"
                 app:layout_constraintEnd_toEndOf="@id/layout_local"
                 app:layout_constraintStart_toStartOf="@id/layout_local"
                 app:layout_constraintTop_toBottomOf="@id/bt_local2" />
@@ -190,6 +197,7 @@
                 android:layout_marginTop="3dp"
                 android:text="@string/tv_local2"
                 android:textSize="9sp"
+                app:notoTextStyle="regular"
                 app:layout_constraintStart_toStartOf="@id/layout_local"
                 app:layout_constraintEnd_toEndOf="@id/layout_local"
                 app:layout_constraintTop_toBottomOf="@id/tv_local1"
@@ -203,6 +211,7 @@
                 android:text="@string/tv_request"
                 android:textSize="10sp"
                 android:textColor="@color/colorPrimary"
+                app:notoTextStyle="regular"
                 app:layout_constraintTop_toBottomOf="@id/tv_local2"
                 app:layout_constraintStart_toStartOf="@id/layout_local"
                 app:layout_constraintEnd_toEndOf="@id/layout_local"
