--- a/app/src/main/res/layout/fragment_register_passoword.xml
+++ b/app/src/main/res/layout/fragment_register_passoword.xml
@@ -21,6 +21,7 @@
             style="@style/EtLoginStyle"
             android:hint="@string/et_pass"
             android:imeOptions="actionNext"
+            app:notoTextStyle="regular"
             app:layout_constraintBottom_toTopOf="@id/et_check"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -33,6 +34,7 @@
             android:layout_marginTop="15dp"
             style="@style/EtLoginStyle"
             android:hint="@string/et_check"
+            app:notoTextStyle="regular"
             app:layout_constraintTop_toBottomOf="@id/et_pass"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
