--- a/app/src/main/res/layout/fragment_add_route_search.xml
+++ b/app/src/main/res/layout/fragment_add_route_search.xml
@@ -21,6 +21,7 @@
             style="@style/EtAddRouteStyle"
             android:background="@drawable/outline_green"
             android:text=""
+            app:notoTextStyle="regular"
             app:layout_constraintBottom_toTopOf="@id/et_end"
             app:layout_constraintTop_toTopOf="@id/guideline1"
             app:layout_constraintStart_toStartOf="parent"
@@ -43,6 +44,7 @@
             android:text=""
             android:maxLines="1"
             android:background="@drawable/outline_red"
+            app:notoTextStyle="regular"
             app:layout_constraintTop_toBottomOf="@id/et_start"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
