--- a/app/src/main/res/layout/fragment_intro_child.xml
+++ b/app/src/main/res/layout/fragment_intro_child.xml
@@ -22,6 +22,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignStart="@+id/iv_intro_page"
+                app:notoTextStyle="regular"
 
                 android:bufferType="spannable"
                 android:textColor="#423f3f"
