--- a/app/src/main/res/layout/fragment_register_terms.xml
+++ b/app/src/main/res/layout/fragment_register_terms.xml
@@ -33,7 +33,7 @@
             app:layout_constraintTop_toTopOf="@id/guideline1"
             app:layout_constraintVertical_bias="0.110000014"
             app:layout_constraintVertical_chainStyle="packed"
-            app:notoTextStyle="bold" />
+            app:notoTextStyle="medium" />
 
         <ImageView
             android:id="@+id/iv_agree"
@@ -66,6 +66,7 @@
             android:text="@string/cb_agree_all"
             android:textColor="#202020"
             android:textSize="14sp"
+            app:notoTextStyle="regular"
 
             app:layout_constraintStart_toEndOf="@id/cb_agree_all"
             app:layout_constraintTop_toTopOf="@id/cb_agree_all"
@@ -91,6 +92,7 @@
             android:text="@string/cb_agree1"
             android:textColor="#4b4b4b"
             android:textSize="12sp"
+            app:notoTextStyle="regular"
             app:layout_constraintStart_toEndOf="@id/cb_agree1"
             app:layout_constraintTop_toTopOf="@id/cb_agree1"
             app:layout_constraintBottom_toBottomOf="@id/cb_agree1"/>
@@ -113,6 +115,7 @@
             android:text="@string/cb_agree2"
             android:textColor="#4b4b4b"
             android:textSize="12sp"
+            app:notoTextStyle="regular"
             app:layout_constraintStart_toEndOf="@id/cb_agree2"
             app:layout_constraintTop_toTopOf="@id/cb_agree2"
             app:layout_constraintBottom_toBottomOf="@id/cb_agree2"/>
@@ -135,6 +138,7 @@
             android:text="@string/cb_agree3"
             android:textColor="#4b4b4b"
             android:textSize="12sp"
+            app:notoTextStyle="regular"
             app:layout_constraintStart_toEndOf="@id/cb_agree3"
             app:layout_constraintTop_toTopOf="@id/cb_agree3"
             app:layout_constraintBottom_toBottomOf="@id/cb_agree3"/>
@@ -156,6 +160,7 @@
             android:text="@string/cb_agree4"
             android:textColor="#4b4b4b"
             android:textSize="12sp"
+            app:notoTextStyle="regular"
             app:layout_constraintStart_toEndOf="@id/cb_agree4"
             app:layout_constraintTop_toTopOf="@id/cb_agree4"
             app:layout_constraintBottom_toBottomOf="@id/cb_agree4"/>
@@ -178,6 +183,7 @@
             android:text="@string/cb_agree5"
             android:textColor="#4b4b4b"
             android:textSize="12sp"
+            app:notoTextStyle="regular"
             app:layout_constraintStart_toEndOf="@id/cb_agree5"
             app:layout_constraintTop_toTopOf="@id/cb_agree5"
             app:layout_constraintBottom_toBottomOf="@id/cb_agree5"/>
@@ -200,6 +206,7 @@
             android:text="@string/cb_agree6"
             android:textColor="#4b4b4b"
             android:textSize="12sp"
+            app:notoTextStyle="regular"
             app:layout_constraintStart_toEndOf="@id/cb_agree6"
             app:layout_constraintTop_toTopOf="@id/cb_agree6"
             app:layout_constraintBottom_toBottomOf="@id/cb_agree6"/>
