--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -7,7 +7,7 @@
         android:layout_height="match_parent"
         android:background="#15a474">
 
-        <TextView
+        <com.thustop_00.widgets.NotoTextView
             android:id="@+id/tv_splash_subtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -15,13 +15,13 @@
             android:text="@string/tv_splash_subtitle"
             android:textColor="#FFFFFF"
             android:textSize="16sp"
-            android:fontFamily="@font/nanum_square_round_b"
             app:layout_constraintBottom_toTopOf="@+id/iv_splash_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.58000004"
-            app:layout_constraintVertical_chainStyle="packed" />
+            app:layout_constraintVertical_chainStyle="packed"
+            app:notoTextStyle="bold" />
 
         <ImageView
             android:id="@+id/iv_splash_title"
@@ -45,7 +45,7 @@
             app:layout_constraintTop_toBottomOf="@+id/iv_splash_title"
             app:srcCompat="@drawable/img_splash" />
 
-        <TextView
+        <com.thustop_00.widgets.NotoTextView
             android:id="@+id/tv_splash_copyright"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -55,7 +55,7 @@
             android:text="@string/tv_splash_copyright"
             android:textSize="10sp"
             android:textColor="#ffffff"
-            android:fontFamily="@font/nanum_square_round_r"
+            app:notoTextStyle="regular"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
