--- a/app/src/main/res/layout/item_route.xml
+++ b/app/src/main/res/layout/item_route.xml
@@ -29,15 +29,15 @@
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/icon_bus_green" />
 
-        <TextView
+        <com.thustop_00.widgets.NotoTextView
             android:id="@+id/tv_mrv_code"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:fontFamily="@font/sarabun_bold"
             android:text="A15"
             android:textColor="#171d33"
             android:textSize="18sp"
+            app:notoTextStyle="regular"
             app:layout_constraintBottom_toBottomOf="@id/iv_mrv_bus"
             app:layout_constraintStart_toEndOf="@id/iv_mrv_bus"
             app:layout_constraintTop_toTopOf="@id/iv_mrv_bus" />
@@ -52,27 +52,27 @@
             app:layout_constraintTop_toBottomOf="@id/iv_mrv_bus"
             app:srcCompat="@drawable/icon_departure" />
 
-        <TextView
+        <com.thustop_00.widgets.NotoTextView
             android:id="@+id/tv_mrv_stime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/sarabun_regular"
             android:text="7:15"
             android:textColor="#171d33"
             android:textSize="13sp"
+            app:notoTextStyle="regular"
             app:layout_constraintBottom_toBottomOf="@id/iv_mrv_departure"
             app:layout_constraintStart_toEndOf="@id/iv_mrv_departure"
             app:layout_constraintTop_toTopOf="@id/iv_mrv_departure" />
 
-        <TextView
+        <com.thustop_00.widgets.NotoTextView
             android:id="@+id/tv_mrv_departure"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:fontFamily="@font/sarabun_regular"
             android:text="선릉역 1번 출구"
             android:textColor="#757f8c"
             android:textSize="13sp"
+            app:notoTextStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/iv_mrv_departure"
             app:layout_constraintStart_toEndOf="@id/tv_mrv_stime"
             app:layout_constraintTop_toTopOf="@+id/iv_mrv_departure" />
@@ -87,27 +87,27 @@
             app:layout_constraintTop_toBottomOf="@id/iv_mrv_departure"
             app:srcCompat="@drawable/icon_destination" />
 
-        <TextView
+        <com.thustop_00.widgets.NotoTextView
             android:id="@+id/tv_mrv_etime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/sarabun_regular"
             android:text="7:15"
             android:textColor="#171d33"
             android:textSize="13sp"
+            app:notoTextStyle="regular"
             app:layout_constraintBottom_toBottomOf="@id/iv_mrv_destination"
             app:layout_constraintStart_toEndOf="@id/iv_mrv_destination"
             app:layout_constraintTop_toTopOf="@id/iv_mrv_destination" />
 
-        <TextView
+        <com.thustop_00.widgets.NotoTextView
             android:id="@+id/tv_mrv_destination"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:fontFamily="@font/sarabun_regular"
             android:text="수원 성균관대학교"
             android:textColor="#757f8c"
             android:textSize="13sp"
+            app:notoTextStyle="regular"
             app:layout_constraintBottom_toBottomOf="@+id/iv_mrv_destination"
             app:layout_constraintStart_toEndOf="@id/tv_mrv_etime"
             app:layout_constraintTop_toTopOf="@+id/iv_mrv_destination" />
@@ -161,27 +161,27 @@
             app:layout_constraintTop_toBottomOf="@id/pb_mrv_progress"
             app:srcCompat="@drawable/icon_calendar" />
 
-        <TextView
+        <com.thustop_00.widgets.NotoTextView
             android:id="@+id/tv_mrv_days"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
-            android:fontFamily="@font/sarabun_semibold"
             android:text="월요일-금요일"
             android:textColor=" #757f8c"
             android:textSize="11sp"
+            app:notoTextStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/iv_mrv_calendar"
             app:layout_constraintStart_toEndOf="@id/iv_mrv_calendar"
             app:layout_constraintTop_toTopOf="@id/iv_mrv_calendar" />
 
-        <TextView
+        <com.thustop_00.widgets.NotoTextView
             android:id="@+id/tv_mrv_running"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="3dp"
-            android:fontFamily="@font/sarabun_regular"
             android:text="운행"
             android:textSize="11sp"
+            app:notoTextStyle="regular"
             app:layout_constraintBottom_toBottomOf="@id/tv_mrv_days"
             app:layout_constraintStart_toEndOf="@id/tv_mrv_days"
             app:layout_constraintTop_toTopOf="@id/tv_mrv_days" />
