--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -2,11 +2,14 @@
 <layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
+    <data>
+        <variable
+            name="LoginFrag"
+            type="com.thustop_00.LoginFragment" />
+    </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".LoginFragment"
         android:background="@android:color/white">
 
         <androidx.constraintlayout.widget.Guideline
@@ -78,6 +81,7 @@
             android:text="비밀번호찾기"
             android:textSize="11sp"
             android:textColor="#646464"
+            android:onClick="@{LoginFrag::OnFindPassClick}"
             app:layout_constraintStart_toStartOf="@id/bt_login"
             app:layout_constraintTop_toBottomOf="@id/bt_login"
             app:layout_constraintBottom_toBottomOf="parent"/>
@@ -99,6 +103,7 @@
             android:text="회원가입"
             android:textSize="11sp"
             android:textColor="#646464"
+            android:onClick="@{LoginFrag::OnRegisterClick}"
             app:layout_constraintEnd_toEndOf="@id/bt_login"
             app:layout_constraintTop_toTopOf="@id/tv_passFind"
             app:layout_constraintBottom_toBottomOf="@id/tv_passFind"/>
