--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -203,6 +203,7 @@
                 android:text="@string/tv_request"
                 android:textSize="10sp"
                 android:textColor="@color/colorPrimary"
+                android:onClick="@{mainfrag::onTownRequestClick}"
                 app:layout_constraintTop_toBottomOf="@id/tv_local2"
                 app:layout_constraintStart_toStartOf="@id/layout_local"
                 app:layout_constraintEnd_toEndOf="@id/layout_local"
